--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 	<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+	<script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
+        <script type="text/javascript" src="https://vk.com/js/api/openapi.js?169"></script>
+	<script>
+        vkBridge.send('VKWebAppInit');
+        </script>
 
 	<div id="header"></div>
 	<div id="products"></div>
