--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
     <link rel="stylesheet" href="components/Error/Error.css">
 
 	<script src="index.js"></script>
+	
+	
+	<scrirt>
+		document.querySelector("#submits").onclick = function(){
+var pro = localStorageUtil.getProducts();
+console.log(pro);
+	
+}
+
+	</script>
 
 </body>
 </html>
