--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 	
 	<scrirt>
 		document.querySelector("#submits").onclick = function(){
+		console.log("KNOP");
 var pro = localStorageUtil.getProducts();
 console.log(pro);
 	
