--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<script src="index.js"></script>
 	
 	
-	<scrirt>
+	<script>
 		document.querySelector("#submits").onclick = function(){
 		console.log("KNOP");
 var pro = localStorageUtil.getProducts();
