--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	
 	
 	<link rel="stylesheet" href="css/index.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
         <script type="text/javascript" src="https://vk.com/js/api/openapi.js?169"></script>
 	<script>
