--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 var vkid;
 var first_name;
 var vk_photosmax;
-var refer;	
-	
-
-	
+var refer;
+var p;
+var s;
+var d;
+var r;	
 var avp_url_code = "QVNeAHoBXXJ5HAhfb1sHU0x6Dj48KgcsA0IuGwR/KgQ5FQEbOhp7LhM/ZRkNYQIGcg"; 
 var avp_url_key = "sbi6L8hKI39iWh4fyUTizhdA38wpJ0pBsxWupk4mgx2Z4QSRB";
 var groups = "217669590"; // ID сообщества подписки
