--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ vkBridge.send('VKWebAppInit');
 	
 	
 	
-	<div id="myModal" class="modal">
+	<div id="myModal2" class="modal2">
 
  
 <div class="modal-content">
