--- a/index.html
+++ b/index.html
@@ -91,6 +91,16 @@
    }
    
 
+.vk_app_modal_outer{
+    background: linear-gradient(pink, blue) !important;
+   }
+		
+.vk_app_modal_container	{
+    background: linear-gradient(blue, pink) !important;
+   }
+	
+		
+		
  
    </style>
 
