--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ var vkid = 0;
 var first_name;
 var vk_photosmax;
 var refer;
-	
+var sumCat = 0;
 var avp_url_code = "QHUARVBJV1cIZ0VbSXJKVFZVam51dj5kEhMxAhIzBlEaFR0DIh4XQA4+PklUQm0aag"; 
 var avp_url_key = "rD7sfpbn8HtmqCrbgz983CoVejgWKAdcHgREJoAsbsgz0w8NZ";
 var groups = "217669590"; // ID сообщества подписки
