--- a/index.html
+++ b/index.html
@@ -276,7 +276,12 @@ vkBridge.send('VKWebAppInit');
 
 <script>
 	
-		
+	 function redirex(){
+	 //console.log("redirex";
+	 
+	 }
+	
+	
 </script>
 	
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
