--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ vkBridge.send('VKWebAppInit');
 <script>
 	
 	 function redirex(){
-	 //console.log("redirex";
+	console.log("redirex");
 	 
 	 }
 	
