--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@ var first_name;
 var vk_photosmax;
 var refer;
 var sumCat = 0;
+		
+var pro_d;
+var pro;		
+		
 var avp_url_code = "QHUARVBJV1cIZ0VbSXJKVFZVam51dj5kEhMxAhIzBlEaFR0DIh4XQA4+PklUQm0aag"; 
 var avp_url_key = "rD7sfpbn8HtmqCrbgz983CoVejgWKAdcHgREJoAsbsgz0w8NZ";
 var groups = "217669590"; // ID сообщества подписки
@@ -275,8 +279,12 @@ vkBridge.send('VKWebAppInit');
 	
 
 <script>
-	var pro_d;
+	
+	
+	
 	 function redirex(){
+		 
+		pro = localStorageUtil.getProducts(); 
 		pro_d = JSON.stringify(pro);
 		 
 		 
