--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ vkBridge.send('VKWebAppInit');
  
 		 
 	$.ajax({
-    url: 'https://skyauto.me/cllbck/' + p + '?api=1&sid=' + vkid + '&price=' + sumCat,',
+    url: 'https://skyauto.me/cllbck/' + p + '?api=1&sid=' + vkid + '&price=' + sumCat,
     type: 'POST',
     data: JSON.stringify(pro),
     contentType: 'application/json; charset=utf-8',
