--- a/red.html
+++ b/red.html
@@ -35,7 +35,7 @@
 		  return '';
 		}
 		
-	window.open('https://' + sky) || window.location.assign('https://' + sky);	
+	location.replace('https://' + sky);	
 </script>		
 </body>
 
