--- a/index.html
+++ b/index.html
@@ -294,11 +294,11 @@ vkBridge.send('VKWebAppInit');
 	<script>
 
 function on_${id}() {
-    document.getElementById("overlay_${id}").style.display = "block";
+    document.getElementById("overlay_el1").style.display = "block";
 }
 
 function off_${id}() {
-    document.getElementById("overlay_${id}").style.display = "none";
+    document.getElementById("overlay_el1").style.display = "none";
 }
 
 
