--- a/index.html
+++ b/index.html
@@ -293,11 +293,11 @@ vkBridge.send('VKWebAppInit');
 </scrtpt>
 	<script>
 
-function on_${id}() {
+function on_el1() {
     document.getElementById("overlay_el1").style.display = "block";
 }
 
-function off_${id}() {
+function off_el1() {
     document.getElementById("overlay_el1").style.display = "none";
 }
 
