--- a/index.html
+++ b/index.html
@@ -310,6 +310,36 @@ function off_el1() {
 function off_el2() {
     document.getElementById("overlay_el2").style.display = "none";
 }
+function on_el3() {
+    document.getElementById("overlay_el3").style.display = "block";
+}
+
+function off_el3() {
+    document.getElementById("overlay_el3").style.display = "none";
+}
+
+	function on_el4() {
+    document.getElementById("overlay_el4").style.display = "block";
+}
+
+function off_el4() {
+    document.getElementById("overlay_el4").style.display = "none";
+}
+function on_el5() {
+    document.getElementById("overlay_el5").style.display = "block";
+}
+
+function off_el4() {
+    document.getElementById("overlay_el5").style.display = "none";
+}
+
+	function on_el6() {
+    document.getElementById("overlay_el6").style.display = "block";
+}
+
+function off_el6() {
+    document.getElementById("overlay_el6").style.display = "none";
+}
 
 
 </script>	
