--- a/index.html
+++ b/index.html
@@ -99,8 +99,10 @@
     background: linear-gradient(blue, pink) !important;
    }
 	
-		
-
+	
+.show {
+  display: block;
+}
 .btn {
   border: none;
   outline: none;
