--- a/index.html
+++ b/index.html
@@ -391,6 +391,7 @@ filterSelection("all")
 function filterSelection(c) {
   var x, i;
   x = document.getElementsByClassName("products-element");
+	console.log(x);
   if (c == "all") c = "";
   for (i = 0; i < x.length; i++) {
     w3RemoveClass(x[i], "show");
