--- a/index.html
+++ b/index.html
@@ -400,6 +400,9 @@ function off_el6() {
 
 function filter() {
 function render() {
+	ROOT_PRODUCTS.innerHTML = "";
+	
+	
 	const productsStore = localStorageUtil.getProducts();
 
 	headerPage.render(productsStore.length);
