--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@ function off_el6() {
 
 function filter() {
 	 localStorage.clear();
-	
+	ROOT_PRODUCTS.innerHTML = "";
 function render() {
 	
 	
