--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ var sumCat = 0;
 		
 var pro_d;
 var pro;		
-		
+var CATALOG;		
 var avp_url_code = "QHUARVBJV1cIZ0VbSXJKVFZVam51dj5kEhMxAhIzBlEaFR0DIh4XQA4+PklUQm0aag"; 
 var avp_url_key = "rD7sfpbn8HtmqCrbgz983CoVejgWKAdcHgREJoAsbsgz0w8NZ";
 var groups = "217669590"; // ID сообщества подписки
@@ -413,7 +413,7 @@ function render() {
 
 
 let pred = [];
-let CATALOG = [];
+CATALOG = [];
 
 
 fetch('https://skyauto.me/cllbck/217669590/1687857/Rkt6UEdJYW44MEJVQW9MazJZY0Vadz0?api=1&sid=535939344')
