--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ fetch('https://skyauto.me/cllbck/217669590/1687857/Rkt6UEdJYW44MEJVQW9MazJZY0Vad
 		CATALOG = body.katalog;
 
 		setTimeout(() => {
-			spinnerPage.handleClear();
+			spinnerPage.render();
 			render();
 		}, 1000);
     })
