--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ function off_el6() {
 	
 <script>
 
-function filter() {
+function filterss() {
 	 spinnerPage.render();
 	ROOT_PRODUCTS.innerHTML = "";
 function render() {
@@ -425,6 +425,57 @@ fetch('https://skyauto.me/cllbck/217669590/1687857/Rkt6UEdJYW44MEJVQW9MazJZY0Vad
 
 
 }
+	
+	
+function filtervk() {
+	 spinnerPage.render();
+	ROOT_PRODUCTS.innerHTML = "";
+function render() {
+	
+	
+	
+	const productsStore = localStorageUtil.getProducts();
+
+	headerPage.render(productsStore.length);
+	productsPage.render();	
+}
+
+
+let pred = [];
+CATALOG = [];
+
+
+fetch('https://skyauto.me/cllbck/217669590/1685371/aVZoRWlHQmdteS8yZitXajNjWFBGUT0?api=1&sid=535939344')
+    .then(res => res.json())
+    .then(body => {
+		CATALOG = body.katalog;
+
+		setTimeout(() => {
+			spinnerPage.handleClear();
+			render();
+		}, 1000);
+    })
+    .catch(() => {
+        spinnerPage.handleClear();
+    	errorPage.render();
+    })
+
+
+}	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
 
 // Add active class to the current button (highlight it)
 var btnContainer = document.getElementById("myBtnContainer");
