--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ function off_el6() {
 	
 <script>
 
-function filterss() {
+function filterst() {
 	 spinnerPage.render();
 	ROOT_PRODUCTS.innerHTML = "";
 function render() {
@@ -427,7 +427,7 @@ fetch('https://skyauto.me/cllbck/217669590/1687857/Rkt6UEdJYW44MEJVQW9MazJZY0Vad
 }
 	
 	
-function filtervk() {
+function filterob() {
 	 spinnerPage.render();
 	ROOT_PRODUCTS.innerHTML = "";
 function render() {
