--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 }
 
 .btn.active {
-  background-color: linear-gradient(to right, #e2f87c, #d6f567, #c8f151, #b9ee38, #a8eb12);
+ background-image: linear-gradient(to right, #ff00cc 0%, #333399  51%, #ff00cc  100%);
   color: white;
 }
 	
