--- a/index.html
+++ b/index.html
@@ -114,8 +114,9 @@
 }
 
 .btn.active {
- background-image: linear-gradient(to right, #ff00cc 0%, #333399  51%, #ff00cc  100%);
+  background-image: linear-gradient(to right, #ff00cc 0%, #333399  51%, #ff00cc  100%);
   color: white;
+  display: block;
 }
 	
 		
