--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 }
 
 .btn.active {
-  background-image: linear-gradient(to right, #e2f87c, #d6f567, #c8f151, #b9ee38, #a8eb12);
+  background-color: #a8eb12;
   color: white;
  
 }
