--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 }
 
 .btn.active {
-  background-color: #a8eb12;
+  background-image: linear-gradient(to right, #84fab0 0%, #8fd3f4 51%, #84fab0 100%);
   color: white;
  
 }
