--- a/index.html
+++ b/index.html
@@ -109,10 +109,12 @@
   cursor: pointer;
 }
 
-
+.btn:hover {
+  background-color: #ddd;
+}
 
 .btn.active {
-  background-image: linear-gradient(to right, #e2f87c, #d6f567, #c8f151, #b9ee38, #a8eb12);
+  background-color: #99db04;
   color: white;
  
 }
