--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ vkBridge.send('VKWebAppInit');
 	
 	
 	<div id="btns"></div>
-	
+	<div id="avtors"></div>
 	<div id="products"></div>
 	<div id="shopping"></div>
 	<div id="spinner"></div>
