--- a/index.html
+++ b/index.html
@@ -465,7 +465,23 @@ fetch('https://skyauto.me/cllbck/217669590/1685371/aVZoRWlHQmdteS8yZitXajNjWFBGU
 }	
 	
 	
+function filteravt() {
+	 spinnerPage.render();
+	ROOT_PRODUCTS.innerHTML = "";
+
 	
+	
+	
+	
+
+	headerPage.render(productsStore.length);
+	avtorPage.render();	
+
+
+
+
+}	
+		
 	
 	
 	
