--- a/index.html
+++ b/index.html
@@ -475,6 +475,9 @@ function filteravt() {
 	
 
 	headerPage.render(productsStore.length);
+	
+	 spinnerPage.handleClear();
+	
 	avtorPage.render();	
 
 
