--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ vkBridge.send('VKWebAppInit');
 
 	<script src="index.js"></script>
 	
-
+ <script src="components/avtor/avtor.js"></script>
 <script>
 	
 	
