--- a/index.html
+++ b/index.html
@@ -394,6 +394,7 @@ function off_el6() {
 function filterst() {
 	 spinnerPage.render();
 	ROOT_PRODUCTS.innerHTML = "";
+	 ROOT_AVTOR.innerHTML = "";
 function render() {
 	
 	
@@ -431,6 +432,7 @@ fetch('https://skyauto.me/cllbck/217669590/1687857/Rkt6UEdJYW44MEJVQW9MazJZY0Vad
 function filterob() {
 	 spinnerPage.render();
 	ROOT_PRODUCTS.innerHTML = "";
+	ROOT_AVTOR.innerHTML = "";
 function render() {
 	
 	
