--- a/index.html
+++ b/index.html
@@ -474,13 +474,17 @@ function filteravt() {
 	
 	
 	
+	function timav() {
+ spinnerPage.handleClear();
 	
+	avtorPage.render();
+}
+
+setTimeout(timav, 2000);
 
 	
 	
-	 spinnerPage.handleClear();
-	
-	avtorPage.render();	
+	 	
 
 
 
