--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@ vkBridge.send('VKWebAppInit');
 	<script src="index.js"></script>
 	
  <script src="components/avtor/avtor.js"></script>
+ <script src="components/avtor/avtor.css"></script>	
 <script>
 	
 	
