--- a/index.html
+++ b/index.html
@@ -126,8 +126,23 @@
 	
 		
 
-		
-	#blink1 {
+.avtor-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100vh;
+}
+.avtor-message {
+	min-width: 400px;
+	padding: 20px 40px;
+	border-left: 7px solid var(--color-error-dark);
+	text-align: center;
+	background-color: var(--color-error-light);
+	color: var(--color-white);
+	box-shadow: var(--box-shadow);
+}	
+#blink1 {
   -webkit-animation: blink1 3s linear infinite;
   animation: blink1 3s linear infinite;
 }
