--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@ function filteravt() {
 	
 	
 		
-   var player = new Playerjs({id:"player", file:"https://www.youtube.com/watch?v=IHPE88-l9mk"});
+   var player = new Playerjs({id:"player", file:"https://fs.getcourse.ru/fileservice/file/download/a/274014/sc/83/h/4903a1216bad1ad66d526f053a5149d8.mp4"});
 
 		
 }
