--- a/index.html
+++ b/index.html
@@ -511,9 +511,26 @@ function filteravt() {
 	function timav() {
  spinnerPage.handleClear();
 	
-	
+
 		
-   var player = new Playerjs({id:"player", file:"https://fs.getcourse.ru/fileservice/file/download/a/274014/sc/83/h/4903a1216bad1ad66d526f053a5149d8.mp4"});
+		
+	     document.getElementById("player1").addEventListener("init",PlayerInit);
+   var player = new Playerjs({
+      id:"player1",
+      file:[
+         {"title":"Урок - 1 Hits 2022",file:"https://fs.getcourse.ru/fileservice/file/download/a/274014/sc/83/h/4903a1216bad1ad66d526f053a5149d8.mp4"},
+         {"title":"Урок - 2 Hits 90's",file:"https://fs.getcourse.ru/fileservice/file/download/a/280925/sc/349/h/81644955137650ae8738d8683138c539.mp4"},
+         {"title":"Урок - 3 Enigma",file:"https://plrjs.com/sample.mp4"}
+      ]
+   });
+   function PlayerInit(){
+      player.api("moveplaylist","playlist_container");
+   }	
+		
+		
+		
+		
+  
 
 		
 }
