--- a/index.html
+++ b/index.html
@@ -134,7 +134,9 @@
 	height: 100vh;
 }
 .avtor-message {
+	display: flex;
 	min-width: 600px;
+	height: 100vh;
 	padding: 20px 40px;
 	border-left: 7px solid var(--color-error-dark);
 	text-align: center;
