--- a/index.html
+++ b/index.html
@@ -604,8 +604,8 @@ $(function(){
             window.console && console.log(m) || alert(m); 
         },
         items: {
-            "edit": {name: "Edit", icon: "edit"},
-            "cut": {name: "Cut", icon: "cut"},
+            "edit": {name: "Edit", icon: "💚"},
+            "cut": {name: "Cut", icon: "❤️"},
             "copy": {name: "Copy", icon: "copy"},
             "paste": {name: "Paste", icon: "paste"},
             "delete": {name: "Delete", icon: "delete"},
