--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@ function myFunction() {
 }
 // Закрыть раскрывающийся список, если пользователь щелкнет за его пределами.
 window.onclick = function(event) {
-  if (!event.target.matches('.dropbtn')) {
+  if (!event.target.matches('.btn btn-outline-success')) {
     var dropdowns = document.getElementsByClassName("dropdown-content");
     var i;
     for (i = 0; i < dropdowns.length; i++) {
