--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 .dropbtn {
   background-color: #3498DB;
   color: white;
-  padding: 16px;
+  padding: 1px 3px 1px 3px; 
   font-size: 16px;
   border: none;
   cursor: pointer;
