--- a/index.html
+++ b/index.html
@@ -550,7 +550,12 @@ fetch('https://skyauto.me/cllbck/217669590/1685371/aVZoRWlHQmdteS8yZitXajNjWFBGU
 function filteravt() {
 	 spinnerPage.render();
 	ROOT_PRODUCTS.innerHTML = "";
-
+	
+	
+        ROOT_HEADER = = "";
+	const productsStore = localStorageUtil.getProducts();
+	headerPage.render(productsStore.length);
+	
 	
 	avtorPage.render();
 	
