--- a/index.html
+++ b/index.html
@@ -552,7 +552,9 @@ function filteravt() {
 	ROOT_PRODUCTS.innerHTML = "";
 	
 	
-       
+        ROOT_HEADER.innerHTML = "";
+	const productsStore = localStorageUtil.getProducts();
+	headerPage.render(productsStore.length);
 	
 	
 	avtorPage.render();
