--- a/index.html
+++ b/index.html
@@ -175,13 +175,19 @@
 	
 		
 .dropbtn {
-  background-color: #3498DB;
-  color: white;
-  padding: 2px 15px 2px 15px; 
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
+  display: inline-block;
+   padding: 2px 15px 2px 15px; 
+  background: linear-gradient(150deg, rgba(51, 106, 206, 1) 0%, rgba(57, 114, 213, 1) 50%, rgba(35, 90, 191, 1) 50%, rgba(1, 60, 163, 1) 100%);
+  font-size: 15px;
+  color: #fff;
+  border-radius: 3px;
 }
+		
+
+.dropbtn:hover {
+  background: linear-gradient(150deg, rgba(1, 60, 163, 1) 0%, rgba(35, 90, 191, 1) 50%, rgba(57, 114, 213, 1) 50%, rgba(51, 106, 206, 1) 100%);
+}	
+		
 
 .dropbtn:hover, .dropbtn:focus {
   background-color: #2980B9;
@@ -207,6 +213,7 @@
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  cursor: pointer;	
 }
 
 .dropdown a:hover {background-color: #ddd;}
