--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 	
 	min-width: 600px;
 	height: 100vh;
-	padding: 20px 40px;
+	padding: 50px;
 	border-left: 7px solid var(--color-error-dark);
 	text-align: center;
 	background-color: var(--color-error-light);
