--- a/index.html
+++ b/index.html
@@ -759,13 +759,13 @@ window.onclick = function(event) {
 	
 	<script>
 img.onclick = function(){
-    modal.style.display = "block";
+    modalsis.style.display = "block";
     modalImg.src = this.src;
     captionText.innerHTML = this.alt;
 }
 		
 span.onclick = function() { 
-    modal.style.display = "none";
+    modalsis.style.display = "none";
 }		
 
 </script>
