--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ avtor-container {
 .modalpop {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 99999996; /* Sit on top */
     padding-top: 100px; /* Location of the box */
     left: 0;
     top: 0;
