--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@ avtor-container {
 .dropdown-content a {
   color: black;
   padding: 12px 16px;
-  text-decoration: none;
+   font-size: 12px;	
+  
   display: block;
   cursor: pointer;	
 }
