--- a/kino.html
+++ b/kino.html
@@ -49,6 +49,13 @@
 	
 </head>
 <body>
+<div id="player1"></div>
+<div id="playlist_container"></div>	
+	
+	
+	
+	
+	
 	<script>
 var vkid = 0;
 var first_name;
@@ -111,7 +118,7 @@ vkBridge.send('VKWebAppInit');
 		
 </script>
 	
-	<div id="player1"></div>
+	
 	
 	
 	
