--- a/kino.html
+++ b/kino.html
@@ -54,7 +54,7 @@
 <div id="player1"></div>
 <div id="playlist_container"></div>	
 	
-	
+	<iframe src="https://cdn.cdn-films.xyz/FfpzTdrWCJ9D?kp_id=505898" width="640" height="480" frameborder="0" allowfullscreen=""></iframe>
 	
 	<script>
 var vkid = 0;
