--- a/kino.html
+++ b/kino.html
@@ -49,13 +49,17 @@
 	
 </head>
 <body>
+<div class="d-flex justify-content-center"> 
+           
 	
+	<h3> Кинотеатр - ВВ </h3>
+</div>	
 	
-<div id="player1"></div>
-<div id="playlist_container"></div>	
+<div class="d-flex justify-content-center"> 
+           
 	
 	<iframe src="https://cdn.cdn-films.xyz/FfpzTdrWCJ9D?kp_id=505898" width="640" height="480" frameborder="0" allowfullscreen=""></iframe>
-	
+</div>
 	<script>
 var vkid = 0;
 var first_name;
