--- a/kino.html
+++ b/kino.html
@@ -28,11 +28,14 @@
 	
 	
 	
-	   </style>
+	   <style>
 		
 		
 		
+	h3{
+color: white;		
 		
+  }	
 		
 		
 		
@@ -49,11 +52,16 @@
 	
 </head>
 <body>
+<br><br>			
+	
 <div class="d-flex justify-content-center"> 
            
 	
 	<h3> Кинотеатр - ВВ </h3>
 </div>	
+	
+<br><br><br>			
+	
 	
 <div class="d-flex justify-content-center"> 
            
