--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@ function filteravt() {
       id:"player1",
       file:[
          {"title":"Урок - 1 Hits 2022",file:"https://fs.getcourse.ru/fileservice/file/download/a/274014/sc/268/h/bba19f8162d3bd02fc6e2e1101c48a4e.mp4"},
-         {"title":"Урок - 2 Hits 90's",file:"https://fs.getcourse.ru/fileservice/file/download/a/280925/sc/349/h/81644955137650ae8738d8683138c539.mp4"},
+         {"title":"Урок - 2 Hits 90's",file:"https://player02.getcourse.ru/sign-player/?json=eyJ2aWRlb19oYXNoIjoiZWFhYjgxYzE1M2Y2ZmYzNDRiZTEyYzFkMTRkOTM4MzIiLCJ1c2VyX2lkIjoyNTExOTQxMTEsImlwIjoiMTA5LjExMS4xNzUuMyIsInRpbWUiOjE2NzQ4ODY4NDgsInBheWxvYWQiOiJ1XzI1MTE5NDExMSIsInVpX2xhbmd1YWdlIjoicnUiLCJ1c2VyX3JvbGUiOiJhZG1pbiJ9&s=4e882714a5d0e57d10adc816853f6d5b"},
          {"title":"Урок - 3 Enigma",file:"https://cloud.cdnland.in/5a216b8c54e67cb439ce4e89eac01ea1:2023012402/movies/667e12f0f642981d3c914ff998946cf3a754ce99/240.mp4?dn=%D0%90%D0%B2%D0%B0%D1%82%D0%B0%D1%80:%20%D0%9F%D1%83%D1%82%D1%8C%20%D0%B2%D0%BE%D0%B4%D1%8B_1080.mp4"}
       ]
    });
