--- a/kino.html
+++ b/kino.html
@@ -156,7 +156,7 @@ document.getElementById("player1").addEventListener("init",PlayerInit);
       file:[
          {"title":"Урок - 1 Hits 2022",file:"https://fs.getcourse.ru/fileservice/file/download/a/274014/sc/268/h/bba19f8162d3bd02fc6e2e1101c48a4e.mp4"},
          {"title":"Урок - 2 Hits 90's",file:"https://fs.getcourse.ru/fileservice/file/download/a/280925/sc/349/h/81644955137650ae8738d8683138c539.mp4"},
-         {"title":"Урок - 3 Enigma",file:"https://rr2---sn-4g5lznlz.googlevideo.com/videoplayback?expire=1680218986&ei=CsclZLC0Ie-2rtoPiMi6aA&ip=109.111.175.3&id=o-AINOAzD-wAHEo296nK7z_npc31ZRdDCWvwELy11kJjju&itag=22&source=youtube&requiressl=yes&spc=99c5CTjhiegeQrHmaYwSKSBViQQExEo&vprv=1&svpuc=1&mime=video%2Fmp4&cnr=14&ratebypass=yes&dur=1682.332&lmt=1680191528967568&fexp=24007246,24512782&beids=24512782&c=ANDROID&txp=3318224&sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cspc%2Cvprv%2Csvpuc%2Cmime%2Ccnr%2Cratebypass%2Cdur%2Clmt&sig=AOq0QJ8wRQIgZFaCVqnjXNMWMEKVYpoJLYHSL0jXf1f1ck2Mq0EaAm8CIQCFsjWIVFxowY1slFb4q6GD-tkemDKFKS3IOa_eU3z0mw%3D%3D&cm2rm=sn-npcnxu-v8cz7e,sn-n8vyse7&req_id=6868d4e743ba3ee&redirect_counter=2&cms_redirect=yes&cmsv=e&mh=-e&mm=34&mn=sn-4g5lznlz&ms=ltu&mt=1680197103&mv=m&mvi=2&pl=21&lsparams=mh,mm,mn,ms,mv,mvi,pl&lsig=AG3C_xAwRQIhANiwQj0GYiRbi6tu3TOMd8wV0oWc5PuH9GEXzZWCYID7AiADx6RDjbKqyzprr4kE1a3ScVrQMA4vKyVMpr3_QofA3Q%3D%3D?dn=%D0%90%D0%B2%D0%B0%D1%82%D0%B0%D1%80:%20%D0%9F%D1%83%D1%82%D1%8C%20%D0%B2%D0%BE%D0%B4%D1%8B_1080.mp4"}
+         {"title":"Урок - 3 Enigma",file:"https://www.youtube.com/watch?v=jXFkVEA2skE"}
       ]
    });
    function PlayerInit(){
